potential fix for footer problems on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -17,7 +17,8 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
-
+		max-height: 100%;
+		
 	}
 	
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -4582,7 +4583,7 @@
 		padding: 4em 0 2em 0;
 		background: #1c1c1c;
 		text-align: center;
-		position:absolute;
+		position: fixed;
 		bottom:0;
 		min-width:100%;
 	}
